fix ui issues on mobile

--- a/src/web/app.module.css
+++ b/src/web/app.module.css
@@ -16,7 +16,7 @@
   max-height: 130px;
   margin-top: 2vh;
 }
-@media (max-width: 480px) {
+@media (max-width: 767px) {
   .logo {
     max-width: 75%;
     max-height: 200px;
@@ -34,7 +34,7 @@
   padding: 0;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 767px) {
   .container {
     min-width: 95vw;
   }
