--- a/src/web/vote.module.css
+++ b/src/web/vote.module.css
@@ -36,7 +36,7 @@
 .voteButton.faded {
   opacity: 0.5;
 }
-@media (max-width: 480px) {
+@media (max-width: 767px) {
   .vote {
     left: -5px;
     margin-right: 15px;
